--- a/package.json
+++ b/package.json
@@ -33,28 +33,39 @@
         "@babel/preset-env": "^7.4.5",
         "@babel/preset-react": "^7.0.0",
         "@types/autoprefixer": "^9.5.0",
+        "@types/babel-core": "^6.25.6",
+        "@types/bootstrap": "^4.3.0",
         "@types/core-js": "^2.5.0",
         "@types/eslint": "^4.16.6",
         "@types/express": "^4.16.1",
         "@types/html-webpack-plugin": "^3.2.0",
+        "@types/js-cookie": "^2.2.2",
         "@types/mini-css-extract-plugin": "^0.2.0",
         "@types/node-sass": "^4.11.0",
         "@types/prop-types": "^15.7.1",
         "@types/react": "^16.8.19",
+        "@types/react-bootstrap": "^0.32.17",
         "@types/react-dom": "^16.8.4",
+        "@types/react-router-dom": "^4.3.3",
         "@types/stylelint": "^9.10.0",
         "autoprefixer": "^9.5.1",
+        "babel-core": "^6.26.3",
         "babel-loader": "^8.0.6",
+        "babel-polyfill": "^6.26.0",
+        "bootstrap": "^4.3.1",
         "css-loader": "^2.1.1",
         "eslint": "^5.16.0",
         "eslint-plugin-react": "^7.13.0",
         "html-loader": "^0.5.5",
         "html-webpack-plugin": "^3.2.0",
+        "js-cookie": "^2.2.0",
         "mini-css-extract-plugin": "^0.7.0",
         "node-sass": "^4.12.0",
         "postcss-loader": "^3.0.0",
         "postcss-preset-env": "^6.6.0",
         "prop-types": "^15.7.2",
+        "react-bootstrap": "^1.0.0-beta.8",
+        "react-router-dom": "^5.0.0",
         "sass-loader": "^7.1.0",
         "stylelint": "^10.0.1",
         "stylelint-config-sass-guidelines": "^6.0.0",
