--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -5,7 +5,7 @@
 		"at-rule-empty-line-before": null,
 		"indentation": 4,
 		"string-quotes": null,
-		"selector-class-pattern": "^(?:(?:o|c|u|t|s|is|has|_|js|qa)-)?[a-zA-Z0-9]+(?:-[a-zA-Z0-9]+)*(?:__[a-zA-Z0-9]+(?:-[a-zA-Z0-9]+)*)?(?:--[a-zA-Z0-9]+(?:-[a-zA-Z0-9]+)*)?(?:\\[.+\\])?$",
+		"selector-class-pattern": null,
 		"selector-list-comma-newline-after": null,
 		"order/properties-alphabetical-order": null
 	}
